--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "cy:para": "CYPRESS_API_URL='https://mrsn-sc.herokuapp.com/' cy2 run --parallel --key somekey"
+        "cy:para": "CYPRESS_API_URL='https://mrsn-sc.herokuapp.com/' cy2 run --parallel --record --key somekey"
     },
     "devDependencies": {
         "cy2": "^2.0.0",
