--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                containers: [1, 2, 3, 4, 5]
+                containers: [1, 2, 3]
         steps:
             - name: Checkout
               uses: actions/checkout@v2
